<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/ActivityTheme">

    <!-- App Intro -->
    <LinearLayout
        android:id="@+id/intro_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinners_container">

        <include
            layout="@layout/logo_layout"/>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_welcome_text"
            android:layout_marginTop="10dp"
            android:textSize="26sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/permanent_marker_font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/setup_welcome_desc_text" />
    </LinearLayout>

    <!-- Language Input -->
    <LinearLayout
        android:id="@+id/spinners_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/lang_input_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_language_input" />

        <AutoCompleteTextView
            android:id="@+id/primary_language_input"
            android:layout_width="@dimen/lang_input_width"
            android:layout_height="wrap_content"
            android:hint="@string/language_input_hint"
            android:maxLength="25"
            android:theme="@style/TextInputTheme"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary_language_input" />

        <AutoCompleteTextView
            android:id="@+id/secondary_language_input"
            android:layout_width="@dimen/lang_input_width"
            android:layout_height="wrap_content"
            android:hint="@string/language_input_hint"
            android:maxLength="25"
            android:theme="@style/TextInputTheme"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"/>

    </LinearLayout>

    <!-- Button -->
    <Button
        android:id="@+id/setup_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_get_started"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinners_container"/>

</android.support.constraint.ConstraintLayout>