<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <!-- Score Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGray"
        android:layout_marginBottom="20dp"
        android:text="@string/practice_score_label"/>

    <!-- Score -->
    <TextView
        android:id="@+id/score_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="52sp"
        android:text="@string/practice_score"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/practice_incorrect_answers"
        android:layout_marginTop="@dimen/default_margin"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/incorrect_answers_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/default_margin">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>