<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <!-- Title -->
    <TextView
        android:id="@+id/manage_vocabulary_entry_title"
        android:text="@string/dialog_add_word_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGray"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/primary_word_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_word_input_label"/>

    <EditText
        android:id="@+id/primary_word_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputTheme"
        android:imeOptions="actionNext"
        android:hint="@string/word_input_hint"
        android:maxLength="50"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/secondary_word_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_word_input_label"/>

    <EditText
        android:id="@+id/secondary_word_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputTheme"
        android:imeOptions="actionDone"
        android:hint="@string/word_input_hint"
        android:maxLength="50"
        android:inputType="textCapSentences"/>
</LinearLayout>