<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/ActivityTheme">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/last_test_time_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/practice_scores_overview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/practice_last_test_time"
                android:theme="@style/PracticeScoreHeadingTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="27/11/2018 - 21:08"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/practice_scores_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/practice_stats_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_test_time_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/practice_most_recent_score"
                android:theme="@style/PracticeScoreHeadingTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="7/10"
                android:theme="@style/PracticeScoreContentTheme"
                android:textColor="@android:color/holo_red_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/practice_average_score"
                android:theme="@style/PracticeScoreHeadingTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="6/10"
                android:theme="@style/PracticeScoreContentTheme"
                android:textColor="@android:color/holo_orange_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/practice_best_score"
                android:theme="@style/PracticeScoreHeadingTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="8/10"
                android:theme="@style/PracticeScoreContentTheme"
                android:textColor="@android:color/holo_green_dark"/>
        </LinearLayout>

        <Button
            android:id="@+id/practice_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice_start_button"
            android:layout_marginTop="@dimen/practice_start_button_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/practice_scores_overview"/>


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>