<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Start Button -->
    <Button
        android:id="@+id/practice_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practice_start_button"
        android:layout_alignParentTop="true"/>

    <!-- OverView List-->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/dashboard_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/practice_start_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Last Practice Time -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/practice_last_test_time"
                    android:theme="@style/PracticeScoreHeadingTheme"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="27/11/2018 - 21:08"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Most Recent Score -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/practice_most_recent_score"
                    android:theme="@style/PracticeScoreHeadingTheme"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/score_display_progress_background" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/score_display_progress_foreground"/>
                </FrameLayout>
            </LinearLayout>

            <!-- Average Score -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/practice_average_score"
                    android:theme="@style/PracticeScoreHeadingTheme"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/score_display_progress_background" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/score_display_progress_foreground"/>
                </FrameLayout>
            </LinearLayout>

            <!-- Best Score -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/practice_best_score"
                    android:theme="@style/PracticeScoreHeadingTheme"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/score_display_progress_background" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/score_display_progress_foreground"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
